fixed picrew pfp placement on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,7 @@ body {
 	width: 450px;
 	height: 450px;
 	padding: 0.7%;
-	margin-left: 73%;
+	margin-left: 71%;
 	
 }
 .picrew2 {
